# SimpleFileManagerRs

./: Cargo.toml  README.md
src/: file_manager.rs  file_operations.rs  main.rs  search.rs  ui.rs
